--- a/index.html
+++ b/index.html
@@ -5,64 +5,80 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GoIT Homework02</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--This is header-->
     <header>
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
-        <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+        <a href="./index.html" class="link-logo">
+          <span class="web-logo">WEB</span>
+          <span class="studio-logo">STUDIO </span>
+        </a>
+        <ul class="navbar lists">
+          <li>
+            <a href="#" class="pages currentoption">Studio</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="pages">Portfolio</a>
+          </li>
+          <li>
+            <a href="#" class="pages">Contacts</a>
+          </li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <ul class="contact-info lists">
+        <li>
+          <a href="mailto:info@devstudio.com" class="info"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+110001111111" class="info">+11 (000) 111-11-11</a>
+        </li>
       </ul>
     </header>
     <!--This is main-->
     <main>
       <!--This is Section 1-->
-      <section>
-        <h1>
+      <section class="section1 bg-section1">
+        <h1 class="h1-title">
           Effective Solutions <br />
           for Your Business
         </h1>
-        <button type="button" class="button_primary">Order service</button>
+        <button type="button" class="btn primary">Order service</button>
       </section>
       <!--This is Section 2-->
-      <section>
-        <ul>
+      <section class="list-section">
+        <ul class="criteria lists">
           <li>
-            <h3>STRATEGY</h3>
-            <p>
+            <h3 class="titlelist">STRATEGY</h3>
+            <p class="desclist">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3>PUNCTUALITY</h3>
-            <p>
+            <h3 class="titlelist">PUNCTUALITY</h3>
+            <p class="desclist">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3>DILIGENCE</h3>
-            <p>
+            <h3 class="titlelist">DILIGENCE</h3>
+            <p class="desclist">
               Research and confirm brands that represent the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3>TECHNOLOGIES</h3>
-            <p>
+            <h3 class="titlelist">TECHNOLOGIES</h3>
+            <p class="desclist">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -70,9 +86,9 @@
         </ul>
       </section>
       <!--This is Section 3-->
-      <section>
-        <h2>What Are We Doing</h2>
-        <ul>
+      <section class="section3">
+        <h2 class="sectiontitle">What Are We Doing</h2>
+        <ul class="services lists">
           <li>
             <img
               src="images/what-we-do-1.jpg"
@@ -101,10 +117,10 @@
           </li>
         </ul>
       </section>
-      <!--This is Section 3-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <!--This is Section 4-->
+      <section class="section4">
+        <h2 class="sectiontitle">Our Team</h2>
+        <ul class="team lists">
           <li>
             <img
               src="images/our-team-1.jpg"
@@ -112,8 +128,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerero</h3>
-            <p>Product Designer</p>
+            <h3 class="teamname">Mark Guerero</h3>
+            <p class="position">Product Designer</p>
           </li>
 
           <li>
@@ -123,8 +139,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="teamname">Tom Ford</h3>
+            <p class="position">Frontend Developer</p>
           </li>
 
           <li>
@@ -134,8 +150,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="teamname">Camila Garcia</h3>
+            <p class="position">Marketing</p>
           </li>
 
           <li>
@@ -145,16 +161,19 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="teamname">Daniel Wilson</h3>
+            <p class="position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--This is footer-->
-    <footer>
-      <a href="./index.html">WEBSTUDIO</a>
-      <p>
+    <footer class="lastpart footerbg">
+      <a href="./index.html" class="link-logo">
+        <span class="web-logo">WEB</span>
+        <span class="studio-logo2">STUDIO </span>
+      </a>
+      <p class="lastword">
         Increase the flow of customers and<br />
         sales for your business with digital<br />
         marketing & growth solutions.
