--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
       </section>
     </main>
     <!--This is footer-->
-    <footer class="lastpart footerbg">
+    <footer class="footerbg">
       <a href="./index.html" class="link-logo">
         <span class="web-logo">WEB</span>
         <span class="studio-logo2">STUDIO </span>
       </a>
-      <p class="lastword">
+      <p class="footer">
         Increase the flow of customers and<br />
         sales for your business with digital<br />
         marketing & growth solutions.
