--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,118 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>Underconstruction</h1>
+    <!-- This is header -->
+    <header>
+      <nav>
+        <a href="./index.html" class="link-logo">
+          <span class="web-logo">WEB</span>
+          <span class="studio-logo">STUDIO </span>
+        </a>
+        <ul class="navbar lists">
+          <li>
+            <a href="./index.html" class="pages currentoption">Studio</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="pages">Portfolio</a>
+          </li>
+          <li>
+            <a href="#" class="pages">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+
+      <ul class="contact-info lists">
+        <li>
+          <a href="mailto:info@devstudio.com" class="info"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+110001111111" class="info">+11 (000) 111-11-11</a>
+        </li>
+      </ul>
+    </header>
+    <!-- This is main -->
+    <main>
+      <button type="button">All</button>
+      <button type="button">Web Site</button>
+      <button type="button">App</button>
+      <button type="button">Design</button>
+      <button type="button">Marketing</button>
+
+      <!-- This is row 1 -->
+      <ul>
+        <li>
+          <img src="./images/app-1.jpg" width="360px" />
+          <h3>Banking App Interface Concept</h3>
+          <p>App</p>
+        </li>
+        <li>
+          <img src="./images/marketing-1.jpg" width="360px" />
+          <h3>Cashless Payment</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/app-2.jpg" width="360px" />
+          <h3>Meditation App</h3>
+          <p>App</p>
+        </li>
+      </ul>
+      <!-- This is row 2 -->
+      <ul>
+        <li>
+          <img src="./images/marketing-2.jpg" width="360px" />
+          <h3>Taxi Service</h3>
+          <p>Marketing</p>
+        </li>
+
+        <li>
+          <img src="./images/design-1.jpg" width="360px" />
+          <h3>Screen Illustrations</h3>
+          <p>Design</p>
+        </li>
+
+        <li>
+          <img src="./images/marketing-3.jpg" width="360px" />
+          <h3>Online Courses</h3>
+          <p>Marketing</p>
+        </li>
+      </ul>
+      <!-- This is row 3 -->
+      <ul>
+        <li>
+          <img src="./images/design-2.jpg" width="360px" />
+          <h3>Taxi Service</h3>
+          <p>Design</p>
+        </li>
+
+        <li>
+          <img src="./images/website-1.jpg" width="360px" />
+          <h3>Screen Illustrations</h3>
+          <p>Website</p>
+        </li>
+
+        <li>
+          <img src="./images/website-2.jpg" width="360px" />
+          <h3>Online Courses</h3>
+          <p>Website</p>
+        </li>
+      </ul>
+    </main>
+    <!--This is footer-->
+    <footer class="footerbg">
+      <a href="./index.html" class="link-logo">
+        <span class="web-logo">WEB</span>
+        <span class="studio-logo2">STUDIO </span>
+      </a>
+      <p class="footer">
+        Increase the flow of customers and<br />
+        sales for your business with digital<br />
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
