--- a/portfolio.html
+++ b/portfolio.html
@@ -49,17 +49,21 @@
       <!-- This is row 1 -->
       <ul>
         <li>
-          <img src="./images/app-1.jpg" width="360px" />
+          <img src="./images/app-1.jpg" alt="banking app" width="360" />
           <h3>Banking App Interface Concept</h3>
           <p>App</p>
         </li>
         <li>
-          <img src="./images/marketing-1.jpg" width="360px" />
+          <img
+            src="./images/marketing-1.jpg"
+            alt="cashless payment"
+            width="360"
+          />
           <h3>Cashless Payment</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./images/app-2.jpg" width="360px" />
+          <img src="./images/app-2.jpg" alt="meditation app" width="360" />
           <h3>Meditation App</h3>
           <p>App</p>
         </li>
@@ -67,19 +71,27 @@
       <!-- This is row 2 -->
       <ul>
         <li>
-          <img src="./images/marketing-2.jpg" width="360px" />
+          <img src="./images/marketing-2.jpg" alt="taxi service" width="360" />
           <h3>Taxi Service</h3>
           <p>Marketing</p>
         </li>
 
         <li>
-          <img src="./images/design-1.jpg" width="360px" />
+          <img
+            src="./images/design-1.jpg"
+            alt="screen illustrations"
+            width="360"
+          />
           <h3>Screen Illustrations</h3>
           <p>Design</p>
         </li>
 
         <li>
-          <img src="./images/marketing-3.jpg" width="360px" />
+          <img
+            src="./images/marketing-3.jpg"
+            alt="online courses"
+            width="360"
+          />
           <h3>Online Courses</h3>
           <p>Marketing</p>
         </li>
@@ -87,19 +99,23 @@
       <!-- This is row 3 -->
       <ul>
         <li>
-          <img src="./images/design-2.jpg" width="360px" />
+          <img
+            src="./images/design-2.jpg"
+            alt="instagram concept"
+            width="360"
+          />
           <h3>Taxi Service</h3>
           <p>Design</p>
         </li>
 
         <li>
-          <img src="./images/website-1.jpg" width="360px" />
+          <img src="./images/website-1.jpg" alt="organic food" width="360" />
           <h3>Screen Illustrations</h3>
           <p>Website</p>
         </li>
 
         <li>
-          <img src="./images/website-2.jpg" width="360px" />
+          <img src="./images/website-2.jpg" alt="fresh coffee" width="360" />
           <h3>Online Courses</h3>
           <p>Website</p>
         </li>
