--- a/index.html
+++ b/index.html
@@ -6,90 +6,101 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GoIT Homework02</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!--This is header-->
-    <header>
-      <nav>
-        <a href="./index.html" class="link-logo">
+    <header class="header">
+      <!-- Navigation Bar -->
+      <nav class="header-navigation">
+        <a class="header-logo links" href="./index.html">
           <span class="web-logo">WEB</span>
           <span class="studio-logo">STUDIO </span>
         </a>
-        <ul class="navbar lists">
-          <li>
-            <a href="#" class="pages currentoption">Studio</a>
+
+        <ul class="header-list lists">
+          <li class="header-item">
+            <a class="header-link links" href="#">Studio</a>
           </li>
-          <li>
-            <a href="./portfolio.html" class="pages">Portfolio</a>
+          <li class="header-item">
+            <a class="header-link links" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
-            <a href="#" class="pages">Contacts</a>
+          <li class="header-item">
+            <a class="header-link links" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
 
-      <ul class="contact-info lists">
+      <ul class="header-address lists">
         <li>
-          <a href="mailto:info@devstudio.com" class="info"
+          <a class="header-address-link links" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a href="tel:+110001111111" class="info">+11 (000) 111-11-11</a>
+          <a class="header-address-link links" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
         </li>
       </ul>
     </header>
+
     <!--This is main-->
     <main>
       <!--This is Section 1-->
-      <section class="section1 bg-section1">
-        <h1 class="h1-title">
+      <section class="hero-section">
+        <h1 class="hero-title">
           Effective Solutions <br />
           for Your Business
         </h1>
-        <button type="button" class="btn primary">Order service</button>
+        <button class="hero-button button" type="button">Order service</button>
       </section>
+
       <!--This is Section 2-->
-      <section class="list-section">
-        <ul class="criteria lists">
-          <li>
-            <h3 class="titlelist">STRATEGY</h3>
-            <p class="desclist">
+      <section class="features">
+        <ul class="features-list lists">
+          <li class="features-item">
+            <h3 class="features-title titles">STRATEGY</h3>
+            <p class="features-bottom-text bottom-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
-          <li>
-            <h3 class="titlelist">PUNCTUALITY</h3>
-            <p class="desclist">
+          <li class="features-item">
+            <h3 class="features-title titles">PUNCTUALITY</h3>
+            <p class="features-bottom-text bottom-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
-          <li>
-            <h3 class="titlelist">DILIGENCE</h3>
-            <p class="desclist">
+          <li class="features-item">
+            <h3 class="features-title titles">DILIGENCE</h3>
+            <p class="features-bottom-text bottom-text">
               Research and confirm brands that represent the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
-          <li>
-            <h3 class="titlelist">TECHNOLOGIES</h3>
-            <p class="desclist">
+          <li class="features-item">
+            <h3 class="features-title titles">TECHNOLOGIES</h3>
+            <p class="features-bottom-text bottom-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
+
       <!--This is Section 3-->
-      <section class="section3">
-        <h2 class="sectiontitle">What Are We Doing</h2>
-        <ul class="services lists">
-          <li>
+      <section class="what-we-do">
+        <h2 class="what-we-do-title section-title">What Are We Doing</h2>
+        <ul class="what-we-do-list lists">
+          <li class="what-we-do-item">
             <img
               src="images/what-we-do-1.jpg"
               alt="computer monitor"
@@ -98,7 +109,7 @@
             />
           </li>
 
-          <li>
+          <li class="what-we-do-item">
             <img
               src="images/what-we-do-2.jpg"
               alt="phone"
@@ -107,7 +118,7 @@
             />
           </li>
 
-          <li>
+          <li class="what-we-do-item">
             <img
               src="images/what-we-do-3.jpg"
               alt="phone & laptop"
@@ -117,63 +128,65 @@
           </li>
         </ul>
       </section>
+
       <!--This is Section 4-->
-      <section class="section4">
-        <h2 class="sectiontitle">Our Team</h2>
-        <ul class="team lists">
-          <li>
+      <section class="team">
+        <h2 class="team-title section-title">Our Team</h2>
+        <ul class="team-list lists">
+          <li class="team-item">
             <img
               src="images/our-team-1.jpg"
               alt="Mark Guerero"
               width="264"
               height="260"
             />
-            <h3 class="teamname">Mark Guerero</h3>
-            <p class="position">Product Designer</p>
+            <h3 class="team-title titles">Mark Guerero</h3>
+            <p class="team-bottom-text bottom-text">Product Designer</p>
           </li>
 
-          <li>
+          <li class="team-item">
             <img
               src="images/our-team-2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3 class="teamname">Tom Ford</h3>
-            <p class="position">Frontend Developer</p>
+            <h3 class="team-title titles">Tom Ford</h3>
+            <p class="team-bottom-text bottom-text">Frontend Developer</p>
           </li>
 
-          <li>
+          <li class="team-item">
             <img
               src="images/our-team-3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3 class="teamname">Camila Garcia</h3>
-            <p class="position">Marketing</p>
+            <h3 class="team-title titles">Camila Garcia</h3>
+            <p class="team-bottom-text bottom-text">Marketing</p>
           </li>
 
-          <li>
+          <li class="team-item">
             <img
               src="images/our-team-4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3 class="teamname">Daniel Wilson</h3>
-            <p class="position">UI Designer</p>
+            <h3 class="team-title titles">Daniel Wilson</h3>
+            <p class="team-bottom-text bottom-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+
     <!--This is footer-->
-    <footer class="footerbg">
-      <a href="./index.html" class="link-logo">
+    <footer class="footer">
+      <a class="header-logo links" href="./index.html">
         <span class="web-logo">WEB</span>
-        <span class="studio-logo2">STUDIO </span>
+        <span class="studio-logo">STUDIO </span>
       </a>
-      <p class="footer">
+      <p class="footer-bottom-text bottom-text">
         Increase the flow of customers and<br />
         sales for your business with digital<br />
         marketing & growth solutions.
