--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <!-- Navigation Bar -->
       <nav class="header-navigation">
         <a class="header-logo links" href="./index.html">
-          <span class="web-logo">WEB</span>
-          <span class="studio-logo">STUDIO </span>
+          <span class="web-logo">WEB</span
+          ><span class="studio-logo">STUDIO </span>
         </a>
 
         <ul class="header-list lists">
           <li class="header-item">
-            <a class="header-link links" href="#">Studio</a>
+            <a class="header-link links current" href="#">Studio</a>
           </li>
           <li class="header-item">
             <a class="header-link links" href="./portfolio.html">Portfolio</a>
@@ -140,7 +140,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-title titles">Mark Guerero</h3>
+            <h3 class="team-name titles">Mark Guerero</h3>
             <p class="team-bottom-text bottom-text">Product Designer</p>
           </li>
 
@@ -151,7 +151,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-title titles">Tom Ford</h3>
+            <h3 class="team-name titles">Tom Ford</h3>
             <p class="team-bottom-text bottom-text">Frontend Developer</p>
           </li>
 
@@ -162,7 +162,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-title titles">Camila Garcia</h3>
+            <h3 class="team-name titles">Camila Garcia</h3>
             <p class="team-bottom-text bottom-text">Marketing</p>
           </li>
 
@@ -173,7 +173,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-title titles">Daniel Wilson</h3>
+            <h3 class="team-name titles">Daniel Wilson</h3>
             <p class="team-bottom-text bottom-text">UI Designer</p>
           </li>
         </ul>
@@ -183,8 +183,8 @@
     <!--This is footer-->
     <footer class="footer">
       <a class="header-logo links" href="./index.html">
-        <span class="web-logo">WEB</span>
-        <span class="studio-logo">STUDIO </span>
+        <span class="web-logo">WEB</span
+        ><span class="studio-logo">STUDIO </span>
       </a>
       <p class="footer-bottom-text bottom-text">
         Increase the flow of customers and<br />
