--- a/portfolio.html
+++ b/portfolio.html
@@ -5,129 +5,159 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- This is header -->
     <header>
-      <nav>
-        <a href="./index.html" class="link-logo">
-          <span class="web-logo">WEB</span>
-          <span class="studio-logo">STUDIO </span>
+      <nav class="header-navigation">
+        <a class="header-logo links" href="./index.html">
+          <span class="web-logo">WEB</span
+          ><span class="studio-logo">STUDIO </span>
         </a>
-        <ul class="navbar lists">
-          <li>
-            <a href="./index.html" class="pages currentoption">Studio</a>
+
+        <ul class="header-list lists">
+          <li class="header-item">
+            <a class="header-link links" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a href="./portfolio.html" class="pages">Portfolio</a>
+          <li class="header-item">
+            <a class="header-link links current" href="./portfolio.html"
+              >Portfolio</a
+            >
           </li>
-          <li>
-            <a href="#" class="pages">Contacts</a>
+          <li class="header-item">
+            <a class="header-link links" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
 
-      <ul class="contact-info lists">
+      <ul class="header-address lists">
         <li>
-          <a href="mailto:info@devstudio.com" class="info"
+          <a class="header-address-link links" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a href="tel:+110001111111" class="info">+11 (000) 111-11-11</a>
+          <a class="header-address-link links" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
         </li>
       </ul>
     </header>
     <!-- This is main -->
     <main>
-      <button type="button">All</button>
-      <button type="button">Web Site</button>
-      <button type="button">App</button>
-      <button type="button">Design</button>
-      <button type="button">Marketing</button>
-
+      <ul class="menu-list lists">
+        <li><button class="menu-item active" type="button">All</button></li>
+        <li><button class="menu-item" type="button">Web Site</button></li>
+        <li><button class="menu-item" type="button">App</button></li>
+        <li><button class="menu-item" type="button">Design</button></li>
+        <li><button class="menu-item" type="button">Marketing</button></li>
+      </ul>
       <!-- This is row 1 -->
-      <ul>
-        <li>
-          <img src="./images/app-1.jpg" alt="banking app" width="360" />
-          <h3>Banking App Interface Concept</h3>
-          <p>App</p>
-        </li>
-        <li>
+      <ul class="project-cards-1 lists">
+        <li class="project-item">
           <img
-            src="./images/marketing-1.jpg"
+            src="./images/project-card-1-1.jpg"
+            alt="banking app"
+            width="360"
+          />
+          <h3 class="project-title-1 titles">Banking App Interface Concept</h3>
+          <p class="project-bottom-text bottom-text">App</p>
+        </li>
+        <li class="project-item">
+          <img
+            src="./images/project-card-1-2.jpg"
             alt="cashless payment"
             width="360"
           />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
+          <h3 class="project-title-1 titles">Cashless Payment</h3>
+          <p class="project-bottom-text bottom-text">Marketing</p>
         </li>
-        <li>
-          <img src="./images/app-2.jpg" alt="meditation app" width="360" />
-          <h3>Meditation App</h3>
-          <p>App</p>
+        <li class="project-item">
+          <img
+            src="./images/project-card-1-3.jpg"
+            alt="meditation app"
+            width="360"
+          />
+          <h3 class="project-title-1 titles">Meditation App</h3>
+          <p class="project-bottom-text bottom-text">App</p>
         </li>
       </ul>
       <!-- This is row 2 -->
-      <ul>
-        <li>
-          <img src="./images/marketing-2.jpg" alt="taxi service" width="360" />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
+      <ul class="project-cards-2 lists">
+        <li class="project-item">
+          <img
+            src="./images/project-card-2-1.jpg"
+            alt="taxi service"
+            width="360"
+          />
+          <h3 class="project-title-2 titles">Taxi Service</h3>
+          <p class="project-bottom-text bottom-text">Marketing</p>
         </li>
 
-        <li>
+        <li class="project-item">
           <img
-            src="./images/design-1.jpg"
+            src="./images/project-card-2-2.jpg"
             alt="screen illustrations"
             width="360"
           />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
+          <h3 class="project-title-2 titles">Screen Illustrations</h3>
+          <p class="project-bottom-text bottom-text">Design</p>
         </li>
 
-        <li>
+        <li class="project-item">
           <img
-            src="./images/marketing-3.jpg"
+            src="./images/project-card-2-3.jpg"
             alt="online courses"
             width="360"
           />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
+          <h3 class="project-title-2 titles">Online Courses</h3>
+          <p class="project-bottom-text bottom-text">Marketing</p>
         </li>
       </ul>
       <!-- This is row 3 -->
-      <ul>
-        <li>
+      <ul class="project-cards-3 lists">
+        <li class="projects-item">
           <img
-            src="./images/design-2.jpg"
+            src="./images/project-card-3-1.jpg"
             alt="instagram concept"
             width="360"
           />
-          <h3>Taxi Service</h3>
-          <p>Design</p>
+          <h3 class="project-title-3 titles">Taxi Service</h3>
+          <p class="project-bottom-text bottom-text">Design</p>
         </li>
 
-        <li>
-          <img src="./images/website-1.jpg" alt="organic food" width="360" />
-          <h3>Screen Illustrations</h3>
-          <p>Website</p>
+        <li class="projects-item">
+          <img
+            src="./images/project-card-3-2.jpg"
+            alt="organic food"
+            width="360"
+          />
+          <h3 class="project-title-3 titles">Screen Illustrations</h3>
+          <p class="project-bottom-text bottom-text">Website</p>
         </li>
 
-        <li>
-          <img src="./images/website-2.jpg" alt="fresh coffee" width="360" />
-          <h3>Online Courses</h3>
-          <p>Website</p>
+        <li class="projects-item">
+          <img
+            src="./images/project-card-3-3.jpg"
+            alt="fresh coffee"
+            width="360"
+          />
+          <h3 class="project-title-3 titles">Online Courses</h3>
+          <p class="project-bottom-text bottom-text">Website</p>
         </li>
       </ul>
     </main>
     <!--This is footer-->
-    <footer class="footerbg">
-      <a href="./index.html" class="link-logo">
-        <span class="web-logo">WEB</span>
-        <span class="studio-logo2">STUDIO </span>
+    <footer class="footer">
+      <a class="header-logo links" href="./portfolio.html">
+        <span class="web-logo">WEB</span
+        ><span class="studio-logo">STUDIO </span>
       </a>
-      <p class="footer">
+      <p class="footer-bottom-text bottom-text">
         Increase the flow of customers and<br />
         sales for your business with digital<br />
         marketing & growth solutions.
