--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       </section>
 
       <!--This is Section 2-->
-      <section class="features">
+      <section class="section">
         <ul class="features-list lists">
           <li class="features-item">
-            <h3 class="features-title titles">STRATEGY</h3>
+            <h3 class="features-title titles">Strategy</h3>
             <p class="features-bottom-text bottom-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -71,7 +71,7 @@
           </li>
 
           <li class="features-item">
-            <h3 class="features-title titles">PUNCTUALITY</h3>
+            <h3 class="features-title titles">Punctuality</h3>
             <p class="features-bottom-text bottom-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
@@ -79,7 +79,7 @@
           </li>
 
           <li class="features-item">
-            <h3 class="features-title titles">DILIGENCE</h3>
+            <h3 class="features-title titles">Diligence</h3>
             <p class="features-bottom-text bottom-text">
               Research and confirm brands that represent the strongest digital
               growth opportunities and minimize risk.
@@ -87,7 +87,7 @@
           </li>
 
           <li class="features-item">
-            <h3 class="features-title titles">TECHNOLOGIES</h3>
+            <h3 class="features-title titles">Technologies</h3>
             <p class="features-bottom-text bottom-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -97,7 +97,7 @@
       </section>
 
       <!--This is Section 3-->
-      <section class="what-we-do">
+      <section class="section">
         <h2 class="what-we-do-title section-title">What Are We Doing</h2>
         <ul class="what-we-do-list lists">
           <li class="what-we-do-item">
@@ -130,7 +130,7 @@
       </section>
 
       <!--This is Section 4-->
-      <section class="team">
+      <section class="section section-grey">
         <h2 class="team-title section-title">Our Team</h2>
         <ul class="team-list lists">
           <li class="team-item">
@@ -181,10 +181,10 @@
     </main>
 
     <!--This is footer-->
-    <footer class="footer">
+    <footer class="footer-section">
       <a class="header-logo links" href="./index.html">
         <span class="web-logo">WEB</span
-        ><span class="studio-logo">STUDIO </span>
+        ><span class="studio-logo studio-footer">STUDIO </span>
       </a>
       <p class="footer-bottom-text bottom-text">
         Increase the flow of customers and<br />
