--- a/portfolio.html
+++ b/portfolio.html
@@ -49,113 +49,111 @@
     </header>
     <!-- This is main -->
     <main>
-      <ul class="menu-list lists">
-        <li><button class="menu-item active" type="button">All</button></li>
-        <li><button class="menu-item" type="button">Web Site</button></li>
-        <li><button class="menu-item" type="button">App</button></li>
-        <li><button class="menu-item" type="button">Design</button></li>
-        <li><button class="menu-item" type="button">Marketing</button></li>
-      </ul>
-      <!-- This is row 1 -->
-      <ul class="project-cards-1 lists">
-        <li class="project-item">
-          <img
-            src="./images/project-card-1-1.jpg"
-            alt="banking app"
-            width="360"
-          />
-          <h3 class="project-title-1 titles">Banking App Interface Concept</h3>
-          <p class="project-bottom-text bottom-text">App</p>
-        </li>
-        <li class="project-item">
-          <img
-            src="./images/project-card-1-2.jpg"
-            alt="cashless payment"
-            width="360"
-          />
-          <h3 class="project-title-1 titles">Cashless Payment</h3>
-          <p class="project-bottom-text bottom-text">Marketing</p>
-        </li>
-        <li class="project-item">
-          <img
-            src="./images/project-card-1-3.jpg"
-            alt="meditation app"
-            width="360"
-          />
-          <h3 class="project-title-1 titles">Meditation App</h3>
-          <p class="project-bottom-text bottom-text">App</p>
-        </li>
-      </ul>
-      <!-- This is row 2 -->
-      <ul class="project-cards-2 lists">
-        <li class="project-item">
-          <img
-            src="./images/project-card-2-1.jpg"
-            alt="taxi service"
-            width="360"
-          />
-          <h3 class="project-title-2 titles">Taxi Service</h3>
-          <p class="project-bottom-text bottom-text">Marketing</p>
-        </li>
+      <section>
+        <ul class="filter lists">
+          <li><button class="filter-item active" type="button">All</button></li>
+          <li><button class="filter-item" type="button">Web Site</button></li>
+          <li><button class="filter-item" type="button">App</button></li>
+          <li><button class="filter-item" type="button">Design</button></li>
+          <li><button class="filter-item" type="button">Marketing</button></li>
+        </ul>
 
-        <li class="project-item">
-          <img
-            src="./images/project-card-2-2.jpg"
-            alt="screen illustrations"
-            width="360"
-          />
-          <h3 class="project-title-2 titles">Screen Illustrations</h3>
-          <p class="project-bottom-text bottom-text">Design</p>
-        </li>
+        <ul class="project lists">
+          <li class="project-item">
+            <img
+              src="./images/project-card-1-1.jpg"
+              alt="banking app"
+              width="360"
+            />
+            <h3 class="project-title titles">Banking App Interface Concept</h3>
+            <p class="project-bottom-text bottom-text">App</p>
+          </li>
+          <li class="project-item">
+            <img
+              src="./images/project-card-1-2.jpg"
+              alt="cashless payment"
+              width="360"
+            />
+            <h3 class="project-title titles">Cashless Payment</h3>
+            <p class="project-bottom-text bottom-text">Marketing</p>
+          </li>
+          <li class="project-item">
+            <img
+              src="./images/project-card-1-3.jpg"
+              alt="meditation app"
+              width="360"
+            />
+            <h3 class="project-title titles">Meditation App</h3>
+            <p class="project-bottom-text bottom-text">App</p>
+          </li>
 
-        <li class="project-item">
-          <img
-            src="./images/project-card-2-3.jpg"
-            alt="online courses"
-            width="360"
-          />
-          <h3 class="project-title-2 titles">Online Courses</h3>
-          <p class="project-bottom-text bottom-text">Marketing</p>
-        </li>
-      </ul>
-      <!-- This is row 3 -->
-      <ul class="project-cards-3 lists">
-        <li class="projects-item">
-          <img
-            src="./images/project-card-3-1.jpg"
-            alt="instagram concept"
-            width="360"
-          />
-          <h3 class="project-title-3 titles">Taxi Service</h3>
-          <p class="project-bottom-text bottom-text">Design</p>
-        </li>
+          <li class="project-item">
+            <img
+              src="./images/project-card-2-1.jpg"
+              alt="taxi service"
+              width="360"
+            />
+            <h3 class="project-title titles">Taxi Service</h3>
+            <p class="project-bottom-text bottom-text">Marketing</p>
+          </li>
 
-        <li class="projects-item">
-          <img
-            src="./images/project-card-3-2.jpg"
-            alt="organic food"
-            width="360"
-          />
-          <h3 class="project-title-3 titles">Screen Illustrations</h3>
-          <p class="project-bottom-text bottom-text">Website</p>
-        </li>
+          <li class="project-item">
+            <img
+              src="./images/project-card-2-2.jpg"
+              alt="screen illustrations"
+              width="360"
+            />
+            <h3 class="project-title titles">Screen Illustrations</h3>
+            <p class="project-bottom-text bottom-text">Design</p>
+          </li>
 
-        <li class="projects-item">
-          <img
-            src="./images/project-card-3-3.jpg"
-            alt="fresh coffee"
-            width="360"
-          />
-          <h3 class="project-title-3 titles">Online Courses</h3>
-          <p class="project-bottom-text bottom-text">Website</p>
-        </li>
-      </ul>
+          <li class="project-item">
+            <img
+              src="./images/project-card-2-3.jpg"
+              alt="online courses"
+              width="360"
+            />
+            <h3 class="project-title titles">Online Courses</h3>
+            <p class="project-bottom-text bottom-text">Marketing</p>
+          </li>
+
+          <li class="project-item">
+            <img
+              src="./images/project-card-3-1.jpg"
+              alt="instagram concept"
+              width="360"
+            />
+            <h3 class="project-title titles">Taxi Service</h3>
+            <p class="project-bottom-text bottom-text">Design</p>
+          </li>
+
+          <li class="project-item">
+            <img
+              src="./images/project-card-3-2.jpg"
+              alt="organic food"
+              width="360"
+            />
+            <h3 class="project-title titles">Screen Illustrations</h3>
+            <p class="project-bottom-text bottom-text">Website</p>
+          </li>
+
+          <li class="project-item">
+            <img
+              src="./images/project-card-3-3.jpg"
+              alt="fresh coffee"
+              width="360"
+            />
+            <h3 class="project-title titles">Online Courses</h3>
+            <p class="project-bottom-text bottom-text">Website</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <!--This is footer-->
-    <footer class="footer">
-      <a class="header-logo links" href="./portfolio.html">
+    <footer class="footer-section">
+      <a class="header-logo links" href="./index.html">
         <span class="web-logo">WEB</span
-        ><span class="studio-logo">STUDIO </span>
+        ><span class="studio-logo studio-footer">STUDIO </span>
       </a>
       <p class="footer-bottom-text bottom-text">
         Increase the flow of customers and<br />
